--- a/Contact.html
+++ b/Contact.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Contact Information</h1>
     <p>My Fictional Address</p>
-    <p>202-436-2252</p>
-    <p>wr456y@att.com</p>
+    <p>202-555-5557</p>
+    <p>make@gmail.com</p>
     <hr>
     <form action="mailto:reyes7964@gmail.com" method="post" enctype="text/plain"
         <label>Your Name:</label>
